--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,7 +52,7 @@
                         <a class="nav-link" href="about.html">About</a>
                      </li>
                      <li class="nav-item">
-                        <a class="nav-link" href="shop.html">shop</a>
+                        <a class="nav-link" href="shop.html">menu</a>
                      </li>
                      <li class="nav-item">
                         <a class="nav-link" href="quality.html">quality</a>
@@ -91,7 +91,7 @@
                                     <a class="nav-link" href="about.html">About</a>
                                  </li>
                                  <li class="nav-item">
-                                    <a class="nav-link" href="shop.html">shop</a>
+                                    <a class="nav-link" href="shop.html">menu</a>
                                  </li>
                                  <li class="nav-item">
                                     <a class="nav-link" href="quality.html">quality</a>
@@ -380,7 +380,7 @@
                         <ul class="fullink">
                            <li><a href="index.html">Home</a></li>
                            <li><a href="about.html">About</a></li>
-                           <li><a href="shop.html">Shop</a></li>
+                           <li><a href="shop.html">Menu</a></li>
                             <li><a href="quality.html">Quality</a></li>
                            <li><a href="contact.html">Contact</a></li>
                         </ul>
