--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -61,7 +61,7 @@
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item active">
-                                 <a class="nav-link" href="shop.html">shop</a>
+                                 <a class="nav-link" href="shop.html">menu</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="quality.html">quality</a>
@@ -135,7 +135,7 @@
                         <ul class="fullink">
                            <li><a href="index.html">Home</a></li>
                            <li><a href="about.html">About</a></li>
-                           <li><a href="shop.html">Shop</a></li>
+                           <li><a href="shop.html">Menu</a></li>
                            <li><a href="quality.html">Quality</a></li>
                            <li><a href="contact.html">Contact</a></li>
                         </ul>
