--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -61,7 +61,7 @@
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item active">
-                                 <a class="nav-link" href="shop.html">Menu</a>
+                                 <a class="nav-link" href="shop.html">menu</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="quality.html">quality</a>
