--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -97,7 +97,6 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage text_align_center">
-                     <h2>Our Shop</h2>
                   </div>
                </div>
                <!-- <div class="col-sm-12">
@@ -123,7 +122,7 @@
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="img">
-                <img decoding="async" src="img/biscoff2.jpg" alt="">
+                <img decoding="async" src="images/biscoff2.jpg" alt="">
             </div>
             <div class="content">
                 <h3>biscoff buttercookies</h3>
@@ -145,7 +144,7 @@
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="img">
-                <img decoding="async" src="img/product-2.jpg" alt="">
+                <img decoding="async" src="images/semperitSusu.jpeg" alt="">
             </div>
             <div class="content">
                 <h3>semperit susu</h3>
@@ -167,7 +166,7 @@
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="img">
-                <img decoding="async" src="img/product-3.jpg" alt="">
+                <img decoding="async" src="images/dahlia.jpg" alt="">
             </div>
             <div class="content">
                 <h3>Dahlia cookies</h3>
@@ -189,7 +188,7 @@
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="img">
-                <img decoding="async" src="img/product-4.jpg" alt="">
+                <img decoding="async" src="images/almond.jpg" alt="">
             </div>
             <div class="content">
                 <h3>Almond london cookies</h3>
@@ -211,7 +210,7 @@
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="img">
-                <img decoding="async" src="img/product-5.jpg" alt="">
+                <img decoding="async" src="images/redPearl.jpeg" alt="">
             </div>
             <div class="content">
                 <h3>Red pearl cookies</h3>
@@ -233,7 +232,7 @@
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="img">
-                <img decoding="async" src="img/product-6.jpg" alt="">
+                <img decoding="async" src="images/rainbowChip.jpeg" alt="">
             </div>
             <div class="content">
                 <h3>rainbow chocolate chip</h3>
@@ -255,7 +254,7 @@
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="img">
-                <img decoding="async" src="img/product-7.jpg" alt="">
+                <img decoding="async" src="images/Pineapple2.jpeg" alt="">
             </div>
             <div class="content">
                 <h3>Pineapple tart</h3>
@@ -277,11 +276,55 @@
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="img">
-                <img decoding="async" src="img/product-8.jpg" alt="">
+                <img decoding="async" src="images/creampuff.jpeg" alt="">
             </div>
             <div class="content">
-                <h3>cripsy creampuff</h3>
+                <h3>crispy creampuff</h3>
                 <div class="price">RM 19.90</div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+            </div>
+        </div>
+        
+         <div class="box">
+            <div class="icons">
+                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+            <div class="img">
+                <img decoding="async" src="images/snowball.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>snowball cookies</h3>
+                <div class="price">RM 30.00</div>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="far fa-star"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="icons">
+                <a href="#" class="fas fa-shopping-cart"></a>
+                <a href="#" class="fas fa-heart"></a>
+                <a href="#" class="fas fa-eye"></a>
+            </div>
+            <div class="img">
+                <img decoding="async" src="images/cornflake.jpg" alt="">
+            </div>
+            <div class="content">
+                <h3>Cornflakes cookies</h3>
+                <div class="price">RM 25.00</div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
