--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -123,7 +123,7 @@
                 <a href="#" class="fas fa-eye"></a>
             </div>
             <div class="img">
-                <img decoding="async" src="img/biscoff2.jpg" alt="">
+                <img decoding="async" src="images/biscoff2.jpg" alt="">
             </div>
             <div class="content">
                 <h3>biscoff buttercookies</h3>
