--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,7 +64,7 @@
             <!-- end header inner -->
             <!-- end header -->
           
-         <header>
+         <!-- <header>
         <div class="header">
             <div class="container-fluid">
                 <div class="row d_flex">
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
          
       </header> -->
       <!-- home section start -->
