--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -201,7 +201,7 @@
                 <img decoding="async" src="images/dahlia.jpg" alt="">
             </div>
             <div class="content">
-                <h3>Dahliacookies</h3>
+                <h3>Dahlia scookies</h3>
                 <div class="price">RM 35.00</div>
                 <div class="stars">
                     <i class="fas fa-star"></i>
