--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>honey</title>
+      <title>Home</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -41,7 +41,7 @@
       <!-- end loader -->
       <!-- header -->
     <header class="header">
-    <a href="#" class="logo"> <i class="fas fa-shopping-basket"></i> cake </a>
+    <a href="#" class="logo"> <i class="fas fa-shopping-basket"></i>Lyssaa Liciousss</a>
 
     <nav class="navbar">
         <a href="index.html">Home</a>
@@ -49,7 +49,7 @@
         <a href="about.html">About</a>
         <a href="#">Review</a>
         <a href="#">Blog</a>
-        <a href="#">Contact Us</a>
+        <a href="contactUs.jsp">Contact Us</a>
     </nav>
 
     <div class="icons">
@@ -204,7 +204,7 @@
 
     <div class="content">
         <span>welcome to our products</span>
-        <h3>Alyssa Cookies Shop – Where Every Cookie Tells a Story.</h3>
+        <h3>Lyssaa Liciousss Shop – Where Every Cookie Tells a Story.</h3>
         <p>Our journey began with a simple love for baking and a passion for 
         creating delightful, handmade treats that bring joy and warmth to every 
         occasion. Our mission is to create delicious, high-quality cookies that not 
@@ -262,7 +262,7 @@
                 <span>happy client</span>
             </div>
         </div>
-        <p>"I recently discovered Alyssa Cookies Shop, and I am so glad I did! The rainbow chocolate chip are absolutely divine—crispy on the edges and perfectly gooey in the middle." </p>
+        <p>"I recently discovered Lyssaa Liciousss Shop, and I am so glad I did! The rainbow chocolate chip are absolutely divine—crispy on the edges and perfectly gooey in the middle." </p>
     </div>
 
     <div class="box">
@@ -273,7 +273,7 @@
                 <span>happy client</span>
             </div>
         </div>
-        <p>"Alyssa Cookies Shop is my go-to place for cookies. I've tried almost every flavor they offer, and I have never been disappointed."</p>
+        <p>"Lyssaa Liciousss Shop is my go-to place for cookies. I've tried almost every flavor they offer, and I have never been disappointed."</p>
     </div>
 
     <div class="box">
@@ -284,7 +284,7 @@
                 <span>happy client</span>
             </div>
         </div>
-        <p>"I love Alyssa Cookies Shop! The variety of cookies they offer is fantastic, and each one is better than the last."</p>
+        <p>"I love Lyssaa Liciousss Shop! The variety of cookies they offer is fantastic, and each one is better than the last."</p>
     </div>
 
     <div class="box">
@@ -295,7 +295,7 @@
                 <span>happy client</span>
             </div>
         </div>
-        <p>"I can't say enough good things about Alyssa Cookies Shop. The cookies are always fresh and delicious, and the staff are so welcoming." </p>
+        <p>"I can't say enough good things about Lyssaa Liciousss Shop. The cookies are always fresh and delicious, and the staff are so welcoming." </p>
     </div>
 
     <div class="box">
@@ -306,7 +306,7 @@
                 <span>happy client</span>
             </div>
         </div>
-        <p>"Alyssa Cookies Shop never fails to impress me. Whether I'm grabbing a quick snack or ordering cookies for an event, the quality is always top-notch."</p>
+        <p>"Lyssaa Liciousss Shop never fails to impress me. Whether I'm grabbing a quick snack or ordering cookies for an event, the quality is always top-notch."</p>
     </div>
 
     <div class="box">
@@ -317,7 +317,7 @@
                 <span>happy client</span>
             </div>
         </div>
-        <p>"Alyssa Cookies Shop is simply the best! Their snickerdoodle cookies are my all-time favorite."</p>
+        <p>"Lyssaa Liciousss Shop is simply the best! Their snickerdoodle cookies are my all-time favorite."</p>
     </div>
 
 </section>
@@ -355,7 +355,7 @@
                   <div class="col-md-3 col-sm-6">
                      <div class="infoma text_align_left">
                         <h3>About</h3>
-                        <p class="ipsum">Lyssaa Cookies Shop has something to satisfy every craving. Visit us and experience the joy of our delightful cookies today!</p>
+                        <p class="ipsum">Lyssaa Liciousss Shop has something to satisfy every craving. Visit us and experience the joy of our delightful cookies today!</p>
                         <ul class="social_icon">
                            <li><a href="Javascript:void(0)"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                            <li><a href="Javascript:void(0)"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -373,7 +373,7 @@
 								40460 Shah Alam,<br>
 								Selangor, Malaysia</li>
                            <li>+60 12-345 6789 <br> +60 13-987 6543</li>
-                           <li><a href="Javascript:void(0)"> lyssaacookies@gmail.com</li>
+                           <li><a href="Javascript:void(0)"> LyssaaLiciousss@gmail.com</li>
                         </ul>
                      </div>
                   </div>
@@ -385,7 +385,7 @@
                            <li><a href="about.html">About</a></li>
                            <li><a href="shop.html">Menu</a></li>
                            <li><a href="quality.html">Quality</a></li>
-                           <li><a href="contact.html">Contact</a></li>
+                           <li><a href="contactUs.jsp">Contact</a></li>
                         </ul>
                      </div>
                   </div>
