--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>honey</title>
+      <title>Shop</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -50,7 +50,7 @@
       </div>
       <!-- end loader -->
       <header class="header">
-    <a href="#" class="logo"> <i class="fas fa-shopping-basket"></i> cake </a>
+    <a href="#" class="logo"> <i class="fas fa-shopping-basket"></i>Lyssaa Liciousss</a>
 
     <nav class="navbar">
         <a href="index.html">Home</a>
@@ -58,7 +58,7 @@
         <a href="about.html">About</a>
         <a href="#">Review</a>
         <a href="#">Blog</a>
-        <a href="#">Contact Us</a>
+        <a href="contactUs.jsp">Contact Us</a>
     </nav>
 
     <div class="icons">
@@ -369,14 +369,14 @@
 </div>
 </section>
       <!--  footer -->
-      <footer>
+     <footer>
          <div class="footer">
             <div class="container">
                <div class="row">
                   <div class="col-md-3 col-sm-6">
                      <div class="infoma text_align_left">
                         <h3>About</h3>
-                        <p class="ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedconsectetur </p>
+                        <p class="ipsum">Lyssaa Liciousss Shop has something to satisfy every craving. Visit us and experience the joy of our delightful cookies today!</p>
                         <ul class="social_icon">
                            <li><a href="Javascript:void(0)"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                            <li><a href="Javascript:void(0)"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -387,13 +387,14 @@
                   </div>
                   <div class="col-md-3 col-sm-6">
                      <div class="infoma">
-                        <h3>Adderess</h3>
+                        <h3>Address</h3>
                         <ul class="conta">
-                           <li>Healing Center, oo W Street name, <br>
-                              Loram ipusum 
-                           </li>
-                           <li>(+71) 8522369417 <br>(+71) 8522369417</li>
-                           <li> <a href="Javascript:void(0)"> demo@gmail.com</a></li>
+                           <li>No. 12, Jalan Anggerik Vanilla 31/AF,<br>
+								Kota Kemuning,<br>
+								40460 Shah Alam,<br>
+								Selangor, Malaysia</li>
+                           <li>+60 12-345 6789 <br> +60 13-987 6543</li>
+                           <li><a href="Javascript:void(0)"> LyssaaLiciousss@gmail.com</li>
                         </ul>
                      </div>
                   </div>
@@ -405,7 +406,7 @@
                            <li><a href="about.html">About</a></li>
                            <li><a href="shop.html">Menu</a></li>
                            <li><a href="quality.html">Quality</a></li>
-                           <li><a href="contact.html">Contact</a></li>
+                           <li><a href="contactUs.jsp">Contact</a></li>
                         </ul>
                      </div>
                   </div>
@@ -418,7 +419,7 @@
                                  <input class="newsl" placeholder="Your Name" type="text" name="Your Name">
                               </div>
                               <div class="col-md-12">
-                                 <input class="newsl" placeholder="Email" type="text" name="Email">
+                                 <input class="newsl" placeholder="Email" type="email" name="Email">
                               </div>
                               <div class="col-md-12">
                                  <button class="subsci_btn">subscribe</button>
@@ -433,7 +434,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>© 2020 All Rights Reserved.  <a href="https://html.design/"> Free html Templates</a></p>
+                        <p>© 2020 All Rights Reserved. <a href="https://html.design/">Free html Templates</a></p>
                      </div>
                   </div>
                </div>
@@ -447,5 +448,6 @@
       <script src="js/jquery-3.0.0.min.js"></script>
       <!-- sidebar -->
       <script src="js/custom.js"></script>
+      <script src="main.js"></script>
    </body>
 </html>
