--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -56,7 +56,7 @@
         <a href="index.html">Home</a>
         <a href="shop.html">Shop</a>
         <a href="about.html">About</a>
-        <a href="#">Review</a>
+        <a href="review.html">Review</a>
         <a href="#">Blog</a>
         <a href="contactUs.jsp">Contact Us</a>
     </nav>
