--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -31,6 +31,10 @@
 
        <!-- custom css file link -->
        <link rel="stylesheet" href="style.css">
+       
+        <!--boxicon cdn link -->
+        <link rel="stylesheet"
+ 		 href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
    </head>
    <!-- body -->
    <body class="main-layout">
@@ -46,7 +50,7 @@
     <nav class="navbar">
         <a href="index.html">Home</a>
         <a href="shop.html">Shop</a>
-        <a href="about.html">About</a>
+        <a href="gallery.html">Gallery</a>
         <a href="review.html">Review</a>
         <a href="#">Blog</a>
         <a href="contactUs.jsp">Contact Us</a>
@@ -216,6 +220,48 @@
     </div>
 </section>
 
+
+<!-- number section start -->
+<!-- <section class="number section">
+   <div class="number-row">
+      <div class="num-col">
+         <div class="icon">
+            <i class="bx bx-star"></i>
+         </div>
+         <div class="name">
+            <h4>our experience</h4>
+            <span class="num" data-value="1345">0000</span>
+         </div>
+      </div>
+      <div class="num-col">
+         <div class="icon">
+            <i class="bx bx-user-plus"></i>
+         </div>
+         <div class="name">
+            <h4>Cookies specialist</h4>
+            <span class="num" data-value="1345">0000</span>
+         </div>
+      </div>
+      <div class="num-col">
+         <div class="icon">
+            <i class="bx bx-check"></i>
+         </div>
+         <div class="name">
+              <h4>Complete project</h4>
+            <span class="num" data-value="1345">0000</span>
+         </div>
+      </div>
+      <div class="num-col">
+         <div class="icon">
+            <i class="bx bx-group"></i>
+         </div>
+         <div class="name">
+            <h4>Happy client</h4>
+            <span class="num" data-value="1345">0000</span>
+         </div>
+      </div>
+   </div>
+</section> -->
 <!-- client section start -->
 
 <div class="heading">
@@ -382,9 +428,9 @@
                         <h3>Links</h3>
                         <ul class="fullink">
                            <li><a href="index.html">Home</a></li>
-                           <li><a href="about.html">About</a></li>
-                           <li><a href="shop.html">Menu</a></li>
-                           <li><a href="quality.html">Quality</a></li>
+                           <li><a href="shop.html">Shop</a></li>
+                           <li><a href="gallery.html">Gallery</a></li>
+                           <li><a href="review.html">Review</a></li>
                            <li><a href="contactUs.jsp">Contact</a></li>
                         </ul>
                      </div>
