--- a/src/main/webapp/shop.html
+++ b/src/main/webapp/shop.html
@@ -55,7 +55,7 @@
     <nav class="navbar">
         <a href="index.html">Home</a>
         <a href="shop.html">Shop</a>
-        <a href="about.html">About</a>
+        <a href="gallery.html">Gallery</a>
         <a href="review.html">Review</a>
         <a href="#">Blog</a>
         <a href="contactUs.jsp">Contact Us</a>
@@ -403,9 +403,9 @@
                         <h3>Links</h3>
                         <ul class="fullink">
                            <li><a href="index.html">Home</a></li>
-                           <li><a href="about.html">About</a></li>
-                           <li><a href="shop.html">Menu</a></li>
-                           <li><a href="quality.html">Quality</a></li>
+                           <li><a href="shop.html">Shop</a></li>
+                           <li><a href="gallery.html">Gallery</a></li>
+                           <li><a href="review.html">Review</a></li>
                            <li><a href="contactUs.jsp">Contact</a></li>
                         </ul>
                      </div>
