--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,10 +49,10 @@
 
     <nav class="navbar">
         <a href="index.html">Home</a>
-        <a href="shop.html">Shop</a>
+        <a href="shop.jsp">Shop</a>
         <a href="gallery.html">Gallery</a>
         <a href="review.html">Review</a>
-        <a href="#">Blog</a>
+        <a href="OrderHistory.jsp">Order History</a>
         <a href="contactUs.jsp">Contact Us</a>
     </nav>
 
@@ -127,9 +127,9 @@
 
         <div class="slide active">
             <div class="content">
-                <span>Have a Cookie-A-Licious</span>
-                <h3>up to 50% off</h3>
-                <a href="shop.html" class="btn">Shop Now</a>
+                <span>Welcome To</span>
+                <h3>Lyssaa Liciousss</h3>
+                <a href="shop.jsp" class="btn">Shop Now</a>
             </div>
             <div class="img">
                 <img decoding="async" src="images/susuHome.PNG" alt="">
@@ -140,7 +140,7 @@
             <div class="content">
                 <span>Have a Cookie-A-Licious</span>
                 <h3>up to 50% off</h3>
-                <a href="shop.html" class="btn">Shop Now</a>
+                <a href=""shop.jsp"" class="btn">Shop Now</a>
             </div>
             <div class="img">
                 <img decoding="async" src="images/tartHome.PNG" alt="">
@@ -151,7 +151,7 @@
             <div class="content">
                 <span>Have a Cookie-A-Licious</span>
                 <h3>upto 50% off</h3>
-                <a href="shop.html" class="btn">Shop Now</a>
+                <a href=""shop.jsp"" class="btn">Shop Now</a>
             </div>
             <div class="img">
                 <img decoding="async" src="images/creamHome.PNG" alt="">
@@ -428,7 +428,7 @@
                         <h3>Links</h3>
                         <ul class="fullink">
                            <li><a href="index.html">Home</a></li>
-                           <li><a href="shop.html">Shop</a></li>
+                           <li><a href="shop.jsp">Shop</a></li>
                            <li><a href="gallery.html">Gallery</a></li>
                            <li><a href="review.html">Review</a></li>
                            <li><a href="contactUs.jsp">Contact</a></li>
