--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -132,7 +132,7 @@
                 <a href="shop.jsp" class="btn">Shop Now</a>
             </div>
             <div class="img">
-                <img decoding="async" src="images/susuHome.PNG" alt="">
+                <img decoding="async" src="images/susuHome2.png" alt="">
             </div>
         </div>
 
