--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -132,7 +132,7 @@
                 <a href="shop.jsp" class="btn">Shop Now</a>
             </div>
             <div class="img">
-                <img decoding="async" src="images/susuHome2.png" alt="">
+                <img decoding="async" src="images/tartHome.PNG" alt="">
             </div>
         </div>
 
@@ -143,7 +143,7 @@
                 <a href=""shop.jsp"" class="btn">Shop Now</a>
             </div>
             <div class="img">
-                <img decoding="async" src="images/tartHome.PNG" alt="">
+                <img decoding="async" src="images/creamHome4.png" alt="">
             </div>
         </div>
 
@@ -154,7 +154,7 @@
                 <a href=""shop.jsp"" class="btn">Shop Now</a>
             </div>
             <div class="img">
-                <img decoding="async" src="images/creamHome.PNG" alt="">
+                <img decoding="async" src="images/tartHome.PNG" alt="">
             </div>
         </div>
 
@@ -402,12 +402,6 @@
                      <div class="infoma text_align_left">
                         <h3>About</h3>
                         <p class="ipsum">Lyssaa Liciousss Shop has something to satisfy every craving. Visit us and experience the joy of our delightful cookies today!</p>
-                        <ul class="social_icon">
-                           <li><a href="Javascript:void(0)"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-                           <li><a href="Javascript:void(0)"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                        </ul>
                      </div>
                   </div>
                   <div class="col-md-3 col-sm-6">
